@@ -1,0 +1,2 @@
+[theme]
+inherit = base_theme1
