@@ -1,0 +1,3 @@
+============================
+Test double inheriting theme
+============================
